ADD: ZEList replacement ZEList2 has been added. ADD: ZEList2 Visual Studio debug viewers have been added to ZE.natvis.
svn path=/branches/v0.6.2-Graphics/; revision=1699

--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -62,6 +62,8 @@ ze_add_source(ZEMinHeapTests.cpp		Tests)
 ze_add_source(ZEMaxHeap.h				Sources Headers)
 ze_add_source(ZEMaxHeap.cpp				Sources)
 ze_add_source(ZEMaxHeapTests.cpp		Tests)
+ze_add_source(ZEList2.cpp				Sources)
+ze_add_source(ZEList2.h					Sources Headers)
 ze_add_source(ZEList.cpp				Sources)
 ze_add_source(ZEList.h					Sources Headers)
 ze_add_source(ZEListTests.cpp			Tests)
