!!! BROKEN COMMIT !!! CHG: Light postfix have been changed to prefix on ZELight entities. REM: Many old rendering code have been removed. IMP: Improvements have been made on Rendering.
svn path=/branches/v0.6.2-Graphics/; revision=1706

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -42,21 +42,25 @@ ze_add_source(ZECamera.h							Sources Headers ZEMC)
 
 ze_add_source(ZERNRenderer.cpp 						Sources)
 ze_add_source(ZERNRenderer.h 						Sources Headers)
+ze_add_source(ZERNCommand.cpp 						Sources)
+ze_add_source(ZERNCommand.h 						Sources Headers)
 ze_add_source(ZERNCuller.cpp						Sources)
 ze_add_source(ZERNCuller.h							Sources Headers)
 ze_add_source(ZERNView.cpp							Sources)
 ze_add_source(ZERNView.h							Sources Headers)
+ze_add_source(ZERNRenderParameters.cpp				Sources)
+ze_add_source(ZERNRenderParameters.h				Sources Headers)
 
 ze_add_source(ZELight.cpp 							Sources)
 ze_add_source(ZELight.h 							Sources Headers ZEMC)
-ze_add_source(ZEPointLight.cpp 						Sources)
-ze_add_source(ZEPointLight.h 						Sources Headers ZEMC)
-ze_add_source(ZEProjectiveLight.cpp 				Sources)
-ze_add_source(ZEProjectiveLight.h 					Sources Headers ZEMC)
-ze_add_source(ZEDirectionalLight.cpp	 			Sources)
-ze_add_source(ZEDirectionalLight.h					Sources Headers ZEMC)
-ze_add_source(ZEOmniProjectiveLight.cpp 			Sources)
-ze_add_source(ZEOmniProjectiveLight.h 				Sources Headers ZEMC)
+ze_add_source(ZELightPoint.cpp 						Sources)
+ze_add_source(ZELightPoint.h 						Sources Headers ZEMC)
+ze_add_source(ZELightProjective.cpp 				Sources)
+ze_add_source(ZELightProjective.h 					Sources Headers ZEMC)
+ze_add_source(ZELightDirectional.cpp	 			Sources)
+ze_add_source(ZELightDirectional.h					Sources Headers ZEMC)
+ze_add_source(ZELightOmniProjective.cpp 			Sources)
+ze_add_source(ZELightOmniProjective.h 				Sources Headers ZEMC)
 
 ze_add_source(ZERNSampler.cpp 						Sources)
 ze_add_source(ZERNSampler.h 						Sources Headers ZEMC)
@@ -82,7 +86,7 @@ ze_add_source(ZERNStageLighting.cpp					Sources)
 ze_add_source(ZERNStageHDR.h 						Sources Headers)
 ze_add_source(ZERNStageHDR.cpp 						Sources)
 #ze_add_source(ZERNStageForward.h 					Sources Headers)
-#ze_add_source(ZERNStageForward.cpp 					Sources)
+#ze_add_source(ZERNStageForward.cpp 				Sources)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
