ADD: ZEDSceneWrapper class has been added to project to unify ZEObjectWrappers hierarchy and represent a root object for traversal purposes. CHG: Initialization process has been revised. ZEDViewPort creation has been relocated to ZEDMainEditor class.
svn path=/branches/v0.6.2-NewEditor/; revision=1707

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -5,23 +5,23 @@ LogFileName = error.log
 [ModuleManager]
 ZEGraphicsModule = ZED3D9Module
 ZEInputModule = ZEInputModule
-ZESoundModule = ZEALModule
+ZESoundModule = ZEDSModule
 ZENetworkModule = ZEWinNetwork
 ZEPhysicsModule = ZEPhysXModule
 ZEGameModule = ZETestGame
 
 [Graphics]
-ScreenWidth = 1440
-ScreenHeight = 900
+ScreenWidth = 640
+ScreenHeight = 480
 Fullscreen = false
 VerticalSync = false
-Antialiasing = 1
+Antialiasing = 0
 AnisotropicFilter = 0
 AnisotropicFilterLevel = 8
-ShaderQuality = 3
-TextureQuality = 5
-ModelQuality = 3
-PostEffectQuality = 3
+ShaderQuality = 5
+TextureQuality = 4
+ModelQuality = 5
+PostEffectQuality = 5
 HDRQuality = 5
 ShadowQuality = 1
 LightQuantity = 1
@@ -37,11 +37,4 @@ DialogVolume = 100
 MusicVolume = 100
 VideoVolume = 100
 PlayerCommVolume = 100
-
-[CustHCombat]
-MouseMode = false
-GunSensor = VectorNav00
-HMDSensor = ISense00
-GunSensorPort = 11
-HMDSensorPort = 5
 
