--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -49,6 +49,8 @@ ze_add_source(ZEDTransformationManager.cpp		Sources)
 ze_add_source(ZEDTransformationManager.h		Sources)
 ze_add_source(ZEDScene.cpp						Sources)
 ze_add_source(ZEDScene.h						Sources)
+ze_add_source(ZEDSceneWrapper.cpp				Sources)
+ze_add_source(ZEDSceneWrapper.h					Sources)
 ze_add_source(ZEDObjectWrapper.cpp				Sources)
 ze_add_source(ZEDObjectWrapper.h				Sources)
 ze_add_source(ZEDSelectionManager.cpp			Sources)
