ADD: ZEDMainBrowser class has been added to the project. ZEDMainBrowser is the component of ZEditor which allows browsing of objects on current scene. ADD: ZEDAddToSceneOperation has been added to the project. The framework for registering GUI events and generating suitable ZEDOperations has to be solidified. CHG: Name and Id properties are no longer a member of ZEDObjectWrapper class, but has to be provided by overloading classes.
svn path=/branches/v0.6.2-NewEditor/; revision=1709

--- a/Source/ZEditor/ZEDSceneEditor/CMakeLists.txt
+++ b/Source/ZEditor/ZEDSceneEditor/CMakeLists.txt
@@ -38,6 +38,12 @@ cmake_minimum_required (VERSION 2.8)
 ze_add_source(ZEDMainEditor.ui					Sources QtUI)
 ze_add_source(ZEDMainEditor.cpp					Sources)
 ze_add_source(ZEDMainEditor.h					Sources QtMocs)
+ze_add_source(ZEDMainBrowser.ui					Sources QtUI)
+ze_add_source(ZEDMainBrowser.cpp				Sources)
+ze_add_source(ZEDMainBrowser.h					Sources QtMocs)
+ze_add_source(ZEDAddToSceneOperation.cpp			Sources)
+ze_add_source(ZEDAddToSceneOperation.h				Sources)
+
 
 qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
