CHG: Zinek Engine version selection script for Cmake has been modified. CHG: Minor modifications in AirbusTrain project.
svn path=/trunk/; revision=1711

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,8 @@ endif()
  
 project(ZinekEngine)
 
-
-set(ZEBUILD_EDITION "Development" CACHE STRING "Determines edition of the Zinek Engine. Values: Standard, Development, Demo")
+set(ZEBUILD_EDITION "Development" CACHE STRING "Determines Zinek Engine Edition.")
+set_property(CACHE ZEBUILD_EDITION PROPERTY STRINGS "Standard" "Development" "Demo")
 string(TOUPPER ${ZEBUILD_EDITION} ZEBUILD_EDITION_UPPER)
 add_definitions(-DZE_EDITION_${ZEBUILD_EDITION_UPPER})
 add_definitions(-DZE_EDITION=${ZEBUILD_EDITION_UPPER})
