IMP: Many improvements have been done on ZEGraphics and ZERenderer. IMP: Started shader implementation and early tests on ZEGraphics and ZERenderer.
svn path=/branches/v0.6.2-Graphics/; revision=1713

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -69,6 +69,9 @@ ze_add_source(ZEGRVertexBuffer.cpp 			Sources)
 ze_add_source(ZEGRVertexBuffer.h 			Sources Headers)
 ze_add_source(ZEGRConstantBuffer.cpp		Sources)
 ze_add_source(ZEGRConstantBuffer.h			Sources Headers)
+
+ze_add_Source(ZEGRFormat.cpp				Sources)
+ze_add_Source(ZEGRFormat.h					Sources Headers)
 ze_add_source(ZEGRTexture.cpp 				Sources)
 ze_add_source(ZEGRTexture.h 				Sources Headers)
 ze_add_source(ZEGRTexture2D.cpp				Sources)
