--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -72,11 +72,11 @@ ze_add_source(ZERNSimpleMaterial.cpp 				Sources)
 ze_add_source(ZERNSimpleMaterial.h 					Sources Headers)
 ze_add_source(ZEFixedMaterial.cpp 					Sources)
 ze_add_source(ZEFixedMaterial.h 					Sources Headers ZEMC)
-ze_add_source(ZEMaterialResource.cpp 				Sources)
-ze_add_source(ZEMaterialResource.h 					Sources Headers)
 
 ze_add_source(ZERNStage.h 							Sources Headers)
 ze_add_source(ZERNStage.cpp 						Sources)
+ze_add_source(ZERNStageID.h 						Sources Headers)
+ze_add_source(ZERNStageID.cpp 						Sources)
 ze_add_source(ZERNStageManager.h 					Sources Headers)
 ze_add_source(ZERNStageManager.cpp 					Sources)
 ze_add_source(ZERNStageGBuffer.h 					Sources Headers)
@@ -87,8 +87,8 @@ ze_add_source(ZERNStageLighting.h 					Sources Headers)
 ze_add_source(ZERNStageLighting.cpp					Sources)
 ze_add_source(ZERNStageHDR.h 						Sources Headers)
 ze_add_source(ZERNStageHDR.cpp 						Sources)
-#ze_add_source(ZERNStageForward.h 					Sources Headers)
-#ze_add_source(ZERNStageForward.cpp 				Sources)
+ze_add_source(ZERNStageForward.h 					Sources Headers)
+ze_add_source(ZERNStageForward.cpp 					Sources)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
