ADD: Syntax coloring has been added to ZEDSHShaderEditor. IMP: Error/Output Window, Compilation and Recent Files functionality in ZEDSHShaderEditor have been implemented.
svn path=/branches/v0.6.2-Graphics/; revision=1718

--- a/Source/ZEEngine/ZEGraphics/ZEDSHShaderEditor/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEDSHShaderEditor/CMakeLists.txt
@@ -54,4 +54,4 @@ qt4_wrap_ui(QtUIFiles ${QtUIs})
 source_group("Generated" FILES ${QtMocFiles} ${QtUIFiles})
 ze_add_executable(TARGET ZEDSHShaderEditor
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles}
-	LIBS ZEFoundation libQt libMSVCRv100)
+	LIBS ZEFoundation ZEGraphics ZEDirect3D11 libQt libMSVCRv100)
