ADD: Added reading support for ZEMLFormatXMLV1. (Buggy) FIX: Empty string bug in ZEMLFormatBinaryV1 has been fixed.
svn path=/trunk/; revision=1725

--- a/Source/ZETools/ZEMLEditor/CMakeLists.txt
+++ b/Source/ZETools/ZEMLEditor/CMakeLists.txt
@@ -67,4 +67,4 @@ qt4_add_resources(QtResourceOutputs ${QtResources})
 
 ze_add_executable(TARGET ZEMLEditor 
 	SOURCES ${Sources} ${QtMocOutputs} ${QtUIOutputs} ${QtResourceOutputs}
-	LIBS ZEFoundation libQt)
+	LIBS ZEFoundation libQt libMSVCRv100)
