IMP: Major improvements have been done on ZEDSHEditor error window. FIX: Constant naming problems in ZED11 shaders have been fixed. FIX: Compile problems/errors in ZED11 shaders have been fixed. IMP: Maximum output buffer size in ZELog::Log function has been changed from 4096 to 8192 characters. FIX: Linker errors in ZEDirect3D11 have been fixed.
svn path=/branches/v0.6.2-Graphics/; revision=1729

--- a/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
@@ -68,6 +68,10 @@ ze_add_source(ZED11Shader.cpp					Sources)
 ze_add_source(ZED11Shader.h						Sources)
 ze_add_source(ZED11ShaderCompiler.cpp			Sources)
 ze_add_source(ZED11ShaderCompiler.h				Sources)
+ze_add_source(ZED11ShaderMetaCompiler.cpp		Sources)
+ze_add_source(ZED11ShaderMetaCompiler.h			Sources)
+ze_add_source(ZED11ShaderCompilerIncludeInterface.cpp	Sources)
+ze_add_source(ZED11ShaderCompilerIncludeInterface.h		Sources)
 ze_add_source(ZED11ConstantBuffer.cpp			Sources)
 ze_add_source(ZED11ConstantBuffer.h				Sources)
 ze_add_source(ZED11StatePool.cpp				Sources)
