REN: ZEFixedMaterial has been renamed to ZERNFixedMaterial. IMP: ZERNFixedMaterial has been improved, re-factored and extended to match Direct3D 11 capabilities.
svn path=/branches/v0.6.2-Graphics/; revision=1746

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -62,16 +62,16 @@ ze_add_source(ZELightDirectional.h					Sources Headers ZEMC)
 ze_add_source(ZELightOmniProjective.cpp 			Sources)
 ze_add_source(ZELightOmniProjective.h 				Sources Headers ZEMC)
 
-ze_add_source(ZERNSampler.cpp 						Sources)
-ze_add_source(ZERNSampler.h 						Sources Headers ZEMC)
+ze_add_source(ZERNMap.cpp 							Sources)
+ze_add_source(ZERNMap.h 							Sources Headers ZEMC)
 ze_add_source(ZERNShaderSlots.cpp 					Sources)
 ze_add_source(ZERNShaderSlots.h 					Sources Headers)
 ze_add_source(ZERNMaterial.cpp 						Sources)
 ze_add_source(ZERNMaterial.h 						Sources Headers ZEMC)
 ze_add_source(ZERNSimpleMaterial.cpp 				Sources)
 ze_add_source(ZERNSimpleMaterial.h 					Sources Headers)
-ze_add_source(ZEFixedMaterial.cpp 					Sources)
-ze_add_source(ZEFixedMaterial.h 					Sources Headers ZEMC)
+ze_add_source(ZERNFixedMaterial.cpp 				Sources)
+ze_add_source(ZERNFixedMaterial.h 					Sources Headers ZEMC)
 
 ze_add_source(ZERNStage.h 							Sources Headers)
 ze_add_source(ZERNStage.cpp 						Sources)
