FIX: Minor and major bug fixes and improvements have been don ZELCLicense. IMP: Launcher license module ZELNLicenseModule has been implemented by using ZELCLicense. IMP: ZELCLicenseTool source code have been reorganized and improved. FIX: ZEMetaCompiler ZEPackStruct problems has been fixed.
svn path=/trunk/; revision=1755

--- a/Source/ZELNLauncher/CMakeLists.txt
+++ b/Source/ZELNLauncher/CMakeLists.txt
@@ -51,8 +51,8 @@ ze_add_source(ZELNLogWidget.cpp					Sources)
 ze_add_source(ZELNLogWidget.h					Sources QtMocs)
 ze_add_source(ZELNLogWidget.ui					Sources QtUIs)
 
-ze_add_source(ZELNLicense.cpp					Sources)
-ze_add_source(ZELNLicense.h						Sources)
+ze_add_source(ZELNLicenseModule.cpp				Sources)
+ze_add_source(ZELNLicenseModule.h				Sources)
 ze_add_source(ZELNLicenseWidget.cpp				Sources)
 ze_add_source(ZELNLicenseWidget.h				Sources QtMocs)
 ze_add_source(ZELNLicenseWidget.ui				Sources QtUIs)
@@ -76,6 +76,6 @@ qt4_add_resources(QtResourceOutputs ${QtResources})
 
 ze_add_executable(TARGET ZELNLauncher 
 	SOURCES ${Sources} ${QtMocOutputs} ${QtUIOutputs} ${QtResourceOutputs}
-	LIBS ZEFoundation libQt libMSVCRv100)
+	LIBS ZEFoundation ZEProtect libQt libMSVCRv100)
 	
 source_group("Generated" FILES ${QtMocOutputs} ${QtUIOutputs} ${QtResourceOutputs})
