--- a/Source/ZETools/CMakeLists.txt
+++ b/Source/ZETools/CMakeLists.txt
@@ -44,9 +44,9 @@ ze_add_module(ZE3dsMax)
 ze_add_module(ZEFontBaker)
 ze_add_module(ZEToolComponents)
 ze_add_module(ZECrashReport)
-ze_add_module(ZEProtectActivator)
 ze_add_module(ZESceneConverter)
 ze_add_module(ZEMLEditor)
 ze_add_module(ZETerrainExporter)
+ze_add_module(ZELCLicenseTool)
 
 ze_add_cmake_project(ZETools)
