--- a/Source/ZETools/ZELCLicenseTool/CMakeLists.txt
+++ b/Source/ZETools/ZELCLicenseTool/CMakeLists.txt
@@ -35,9 +35,16 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEProtectActivator.cpp		Sources)
+ze_add_source(ZELCMain.cpp					Sources)
+ze_add_source(ZELCLicenseToolWindow.cpp		Sources)
+ze_add_source(ZELCLicenseToolWindow.h		Sources QtMocs)
+ze_add_source(ZELCLicenseToolWindow.ui		Sources QtUIs)
+ze_add_source(ZELCStyle.qrc					Sources QtResources)
 
-ze_add_executable(TARGET ZEProtectActivator
-	CONSOLE
-	SOURCES ${Sources}
-	LIBS ZEFoundation ZEProtect)
+qt4_wrap_ui(QtUIOutputs ${QtUIs})
+qt4_wrap_cpp(QtMocOutputs  ${QtMocs})
+qt4_add_resources(QtResourceOutputs ${QtResources})
+
+ze_add_executable(TARGET ZELCLicensingTool
+	SOURCES ${Sources} ${QtMocOutputs} ${QtUIOutputs} ${QtResourceOutputs}
+	LIBS ZEFoundation ZEProtect libQt)
