ADD: License Manager tool has been added to Launcher License module. CHG: ZELNLauncher has been changed to use external Qt 5.x version. IMP: ZEGUID::FromString function has been improved to parse GUID strings with space characters. FIX: ZELCLicense::Load GUID bug has been fixed. ADD: Enabled property has been added to ZELCLicense.
svn path=/trunk/; revision=1756

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,8 +67,6 @@ ze_symbol_server_init()
 set(ZEBUILD_MONOLITHIC FALSE CACHE BOOL "Compile Zinek as monolithic. No dll will be generated and external plugins will be disabled.")
 
 
-
-
 ## Compiler & Linker Options
 #########################################################################################
 if ("${ZEBUILD_PLATFORM_COMPILER}" EQUAL "MSVC")
@@ -94,7 +92,7 @@ include_directories(
 	${CMAKE_CURRENT_SOURCE_DIR}/Source
 	${CMAKE_CURRENT_SOURCE_DIR}/Source/ZEEngine
 	${CMAKE_CURRENT_SOURCE_DIR}/Source/ZEFoundation)
-
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 include(ze_qt)
 
 add_definitions(-DFREEIMAGE_LIB)
