IMP: ZELNLicense module has been improved. IMP: ZELCLicense has been improved. FIX: Many bug fixes, refactoring have been made on ZELNLicenseManagerDialog.
svn path=/trunk/; revision=1757

--- a/Source/ZELNLauncher/CMakeLists.txt
+++ b/Source/ZELNLauncher/CMakeLists.txt
@@ -56,9 +56,12 @@ ze_add_source(ZELNLicenseModule.h				Sources)
 ze_add_source(ZELNLicenseWidget.cpp				Sources)
 ze_add_source(ZELNLicenseWidget.h				Sources QtMocs)
 ze_add_source(ZELNLicenseWidget.ui				Sources QtUIs)
-ze_add_source(ZELNLicenseManagerWindow.cpp		Sources)
-ze_add_source(ZELNLicenseManagerWindow.h		Sources QtMocs)
-ze_add_source(ZELNLicenseManagerWindow.ui		Source QtUIs)
+ze_add_source(ZELNLicenseManagerDialog.cpp		Sources)
+ze_add_source(ZELNLicenseManagerDialog.h		Sources QtMocs)
+ze_add_source(ZELNLicenseManagerDialog.ui		Source QtUIs)
+ze_add_source(ZELNLicenseEditorDialog.cpp		Sources)
+ze_add_source(ZELNLicenseEditorDialog.h			Sources QtMocs)
+ze_add_source(ZELNLicenseEditorDialog.ui		Source QtUIs)
 
 ze_add_source(ZELNUpdate.cpp					Sources)
 ze_add_source(ZELNUpdate.h						Sources)
