FIX: Output directory of the all executable targets has been set to RunDir. FIX: ZEMLReaderNode has been const corrected. CHG: Launcher modules has been renamed. IMP: ZELNLaucher can be configured by using Launcher.ZEConfig file. CHG: ZELNModuleDescription has been added and ZELNModule management has been improved.
svn path=/trunk/; revision=1758

--- a/Source/ZELNLauncher/CMakeLists.txt
+++ b/Source/ZELNLauncher/CMakeLists.txt
@@ -45,8 +45,8 @@ ze_add_source(ZELNLauncherWindow.h				Sources QtMocs)
 ze_add_source(ZELNLauncherWindow.ui				Sources QtUIs)
 ze_add_source(ZELNLauncher.qrc					Sources QtResources)
 
-ze_add_source(ZELNLog.cpp						Sources)
-ze_add_source(ZELNLog.h							Sources)
+ze_add_source(ZELNLogModule.cpp					Sources)
+ze_add_source(ZELNLogModule.h					Sources)
 ze_add_source(ZELNLogWidget.cpp					Sources)
 ze_add_source(ZELNLogWidget.h					Sources QtMocs)
 ze_add_source(ZELNLogWidget.ui					Sources QtUIs)
@@ -63,14 +63,14 @@ ze_add_source(ZELNLicenseEditorDialog.cpp		Sources)
 ze_add_source(ZELNLicenseEditorDialog.h			Sources QtMocs)
 ze_add_source(ZELNLicenseEditorDialog.ui		Source QtUIs)
 
-ze_add_source(ZELNUpdate.cpp					Sources)
-ze_add_source(ZELNUpdate.h						Sources)
+ze_add_source(ZELNUpdateModule.cpp				Sources)
+ze_add_source(ZELNUpdateModule.h				Sources)
 ze_add_source(ZELNUpdateWidget.cpp				Sources)
 ze_add_source(ZELNUpdateWidget.h				Sources QtMocs)
 ze_add_source(ZELNUpdateWidget.ui				Sources QtUIs)
 
-ze_add_source(ZELNContact.cpp					Sources)
-ze_add_source(ZELNContact.h						Sources)
+ze_add_source(ZELNContactModule.cpp				Sources)
+ze_add_source(ZELNContactModule.h				Sources)
 ze_add_source(ZELNContactWidget.cpp				Sources)
 ze_add_source(ZELNContactWidget.h				Sources QtMocs)
 ze_add_source(ZELNContactWidget.ui				Sources QtUIs)
