CHG: Sisy-Object callback implementation has been added to ZETICallbackImplementations.cpp for signal manipulation from network. CHG: Zinek Licensing protocols have been inserted to ZETIMain.cpp. CHG: Minor implementation changes in ZETISignal, ZETISignalManager, ZETIModule.
svn path=/branches/v0.6.2-AirbusTrainSimulator/; revision=1766

--- a/Source/ZELNLauncher/CMakeLists.txt
+++ b/Source/ZELNLauncher/CMakeLists.txt
@@ -75,6 +75,8 @@ ze_add_source(ZELNContactWidget.cpp				Sources)
 ze_add_source(ZELNContactWidget.h				Sources QtMocs)
 ze_add_source(ZELNContactWidget.ui				Sources QtUIs)
 
+ze_add_source(../ZEEngine/ZECore/ZEWindowResources.rc 	Sources)
+
 set(CMAKE_LIBRARY_PATH "C:\\Program Files (x86)\\Windows Kits\\8.0\\Lib\\win8\\um\\x64")
 
 find_package(Qt5Core)
