ADD: ZERNDeferredShading shader file, which is used for rendering omniprojective and projective lights, has been added. ADD: ZERNFiltering shader file, which is used for applying post effects, has been added. FIX: Minor bugs have been fixed on ZERNFixedMaterial and ZERNGBuffer shader files. ADD: ZERNHDR shader file, which is used for appyling HDR effects, has been added. ADD: ZERNRenderer shader file, which is used for storing Renderer constants such as elapsed time between frames, has been added. FIX: Minor bugs have been fixed on ZERNScreenCover shader file. FIX: From world to projection space transformation has been fixed on ZERNSimpleMaterial shader file. ADD: ZERNTiledDeferredShading shader file, which is used for rendering many point lights, has been added. IMP: Camera actions have been improved on ZEGRTestModule. FIX: Camera viewport bug has been fixed on ZEGRTestModule. CHG: Stages used for forward rendering have been changed to use deferred rendering on ZEGRTestModule. FIX: Destroying window handle twice has been fixed on ZEWindow. CHG: ZEGRid has been changed to be used in deferred rendering. FIX: Minor bugs have been fixed on ZEDSHCompileOptionsWindow. FIX: Default BlendState values have been fixed on ZEGRBlendState and ZED11StatePool. ADD: Structured buffer setter has been added to ZEGRContext interface. ADD: Structured buffer variables have been added to ZEGRCounter interface. IMP: Readable Depth stencil buffer has been implemented on ZEGRDepthStencilBuffer and ZED11DepthStencilBuffer. FIX: Default depth stencil values have been fixed on ZEGRDepthStencilState. FIX: Texture compression type has been fixed on ZEGRGraphicsModule. FIX: Reference count bug has been fixed on ZEGRHolder. ADD: Depthstencilbuffer and viewport have been added to ZEGROutput and ZED11Output. ADD: Structured buffer resource type has been added to ZEGRResource. ADD: ZEGRStructuredBuffer, which is used for storing large arrays on GPU, has been added. FIX: Filling cube texture content 

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -71,6 +71,8 @@ ze_add_source(ZEGRVertexBuffer.cpp 			Sources)
 ze_add_source(ZEGRVertexBuffer.h 			Sources Headers)
 ze_add_source(ZEGRConstantBuffer.cpp		Sources)
 ze_add_source(ZEGRConstantBuffer.h			Sources Headers)
+ze_add_source(ZEGRStructuredBuffer.cpp		Sources)
+ze_add_source(ZEGRStructuredBuffer.h		Sources Headers)
 
 ze_add_Source(ZEGRFormat.cpp				Sources)
 ze_add_Source(ZEGRFormat.h					Sources Headers)
