--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -50,6 +50,8 @@ ze_add_source(ZERNView.cpp							Sources)
 ze_add_source(ZERNView.h							Sources Headers)
 ze_add_source(ZERNRenderParameters.cpp				Sources)
 ze_add_source(ZERNRenderParameters.h				Sources Headers)
+ze_add_source(ZERNFilter.cpp						Sources)
+ze_add_source(ZERNFilter.h							Sources Headers)
 
 ze_add_source(ZELight.cpp 							Sources)
 ze_add_source(ZELight.h 							Sources Headers ZEMC)
