--- a/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
@@ -74,6 +74,8 @@ ze_add_source(ZED11ShaderCompilerIncludeInterface.cpp	Sources)
 ze_add_source(ZED11ShaderCompilerIncludeInterface.h		Sources)
 ze_add_source(ZED11ConstantBuffer.cpp			Sources)
 ze_add_source(ZED11ConstantBuffer.h				Sources)
+ze_add_source(ZED11StructuredBuffer.cpp			Sources)
+ze_add_source(ZED11StructuredBuffer.h			Sources)
 ze_add_source(ZED11StatePool.cpp				Sources)
 ze_add_source(ZED11State.h						Sources)
 ze_add_source(ZED11State.cpp					Sources)
