CHG: ZE_PLATFORM and ZE_VERSION information has been removed from compile definitions and made into ZEPlatform.h and ZEVersion.h files inorder to prevent recompilation after commit. ADD: ZEVersion.rc generation has been implemented for embedding version information into exe and dlls files in windows.
svn path=/trunk/; revision=1768

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ endif()
 ## Directories
 #########################################################################################
 include_directories(
+	${CMAKE_BINARY_DIR}
 	${CMAKE_CURRENT_SOURCE_DIR}/Source
 	${CMAKE_CURRENT_SOURCE_DIR}/Source/ZEEngine
 	${CMAKE_CURRENT_SOURCE_DIR}/Source/ZEFoundation)
