--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -39,9 +39,9 @@ ze_add_source(ZEAllocator.cpp			Sources)
 ze_add_source(ZEAllocator.h				Sources Headers)
 ze_add_source(ZEArray.cpp				Sources)
 ze_add_source(ZEArray.h					Sources Headers)
-ze_add_source(ZEArrayIterators.cpp		Sources)
-ze_add_source(ZEArrayIterators.h		Sources Headers)
-ze_add_source(ZEArrayIteratorsTests.cpp	Tests)
+ze_add_source(ZEArrayIterator.cpp		Sources)
+ze_add_source(ZEArrayIterator.h			Sources Headers)
+ze_add_source(ZEArrayIteratorTests.cpp	Tests)
 ze_add_source(ZEArrayTests.cpp			Tests)
 ze_add_source(ZEBuffer.cpp				Sources)
 ze_add_source(ZEBuffer.h				Sources Headers)
@@ -62,8 +62,12 @@ ze_add_source(ZEMinHeapTests.cpp		Tests)
 ze_add_source(ZEMaxHeap.h				Sources Headers)
 ze_add_source(ZEMaxHeap.cpp				Sources)
 ze_add_source(ZEMaxHeapTests.cpp		Tests)
+ze_add_source(ZEIterator.cpp			Sources)
+ze_add_source(ZEIterator.h				Sources Headers)
 ze_add_source(ZEList2.cpp				Sources)
 ze_add_source(ZEList2.h					Sources Headers)
+ze_add_source(ZEList2Iterator.cpp		Sources)
+ze_add_source(ZEList2Iterator.h			Sources Headers)
 ze_add_source(ZEList.cpp				Sources)
 ze_add_source(ZEList.h					Sources Headers)
 ze_add_source(ZEListTests.cpp			Tests)
