--- a/Source/ZEFoundation/ZEThread/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEThread/CMakeLists.txt
@@ -41,18 +41,24 @@ ze_add_source(ZELockTests.cpp			Tests)
 ze_add_source(ZEMutex.cpp   			Sources)
 ze_add_source(ZEMutex_Unix.cpp   		Sources PLATFORMS Unix)
 ze_add_source(ZEMutex_Windows.cpp  		Sources PLATFORMS Windows)
-ze_add_source(ZEMutex.h    	 		Sources Headers)
+ze_add_source(ZEMutex.h    	 			Sources Headers)
 ze_add_source(ZEMutexTests.cpp			Tests)
 ze_add_source(ZESignal.cpp   			Sources)
 ze_add_source(ZESignal_Unix.cpp   		Sources PLATFORMS Unix)
-ze_add_source(ZESignal_Windows.cpp  		Sources PLATFORMS Windows)
+ze_add_source(ZESignal_Windows.cpp  	Sources PLATFORMS Windows)
 ze_add_source(ZESignal.h    	 		Sources Headers)
 ze_add_source(ZESignalTests.cpp			Tests)
 ze_add_source(ZEThread.cpp       		Sources)
 ze_add_source(ZEThread_Unix.cpp 		Sources PLATFORMS Unix)
 ze_add_source(ZEThread_Windows.cpp		Sources PLATFORMS Windows)
-ze_add_source(ZEThread.h			Sources Headers)
+ze_add_source(ZEThread.h				Sources Headers)
 ze_add_source(ZEThreadTests.cpp			Tests)
+ze_add_source(ZETask.cpp         		Sources)
+ze_add_source(ZETask.h           		Sources Headers)
+ze_add_source(ZETaskPool.cpp       		Sources)
+ze_add_source(ZETaskPool.h         		Sources Headers)
+ze_add_source(ZETaskManager.cpp   		Sources)
+ze_add_source(ZETaskManager.h     		Sources Headers)
 
 ze_add_library(TARGET ZEThread
 	SOURCES ${Sources} 
